row 2 image change

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
       </div>
     </div>
       <!-- second row  -->  
-    <div class="container">
-      <div class="hero-bg"style="background-image:url(hero_bg.svg)">
-        <div class="row d-flex align-items-center">
-          <div class="col-lg-6 order-lg-1 image-container">
-              <img class="img-fluid img-responsive"src="./img/hero_img.png" alt="image">
+    <div class="container-fluid">
+      <div class="hero-bg"style="background-image:url('./img/hero_bg.svg')">
+        <div class="row d-flex align-items-center justify-content-center">
+          <div class="col-lg-5 order-lg-1 d-flex justify-content-center">
+              <img class="img-fluid img-responsive image-container"src="./img/hero_img.png" alt="image">
           </div>
             <div class="col-lg-6">
               <div class="combine">
